--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,5 @@ telemetry_exe/Raw_Data/*.csv
 telemetry_exe/Parsed_Data/*.zip
 telemetry_exe/Parsed_Data/*.csv
 *.pyc
+telemetry_exe/PlottingPlayground.m
+*.asv
