--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,4 @@ telemetry_exe/PlottingPlayground.m
 *.pyc
 telemetry_parsers/__pycache__/parser_api.cpython-310.pyc
 telemetry_parsers/__pycache__/parser_api.cpython-310.pyc
+*.mat
