--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
-# telemetry_parsers Requirements
-DateTime
-numpy
-scipy
-pandas
-python-dateutil
-cantools
-
-# telemetry_exe Requirements
-PySimpleGUI
-paho-mqtt
-PySerial
-influxdb
-cobs
-argparse
+cantools==37.1.2
+cobs==1.2.0
+influxdb==5.3.1
+numpy==1.23.0
+paho_mqtt==1.6.1
+pandas==1.4.3
+pyserial==3.5
+PySimpleGUI==4.60.5
+python_dateutil==2.8.2
+requests==2.28.0
+scipy==1.8.1
