--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,4 @@ telemetry_parsers/__pycache__/parser_api.cpython-310.pyc
 telemetry_parsers/__pycache__/parser_api.cpython-310.pyc
 *.mat
 *.fig
+.venv/pyvenv.cfg
