--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2  # This action checks out your repository's code
+        uses: actions/checkout@v4  # This action checks out your repository's code
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -19,16 +19,27 @@ jobs:
           python-version: '3.8'  # Replace '3.x' with your Python version
 
       - name: Run Python script
-        run: json_to_dbc.py  # Replace 'your_script.py' with your script's filename
-
-      - name: Compile code with make
-        run: make  # Run 'make' to compile your code
+        run:
+          git status 
+          python json_to_dbc.py  # Replace 'your_script.py' with your script's filename
 
       # - name: Run executable
       #   run: ./your_executable  # Replace 'your_executable' with your executable's filename
+      - name: Get current date and time
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%dT%H_%M_%S')"
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ steps.date.outputs.date }} 
+          files: | 
+            ksu_dbc.dbc
 
       - name: Publish artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: generated-artifacts
-          path: ./  # Replace 'path/to/artifacts' with the directory containing your generated artifacts
+          name: dbc_files
+          path: |
+            ksu_dbc.c
+            ksu_dbc.h
+            ksu_dbc.dbc
