--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Run Python script
         run:
           git status 
-          python json_to_dbc.py  # Replace 'your_script.py' with your script's filename
+          python json_to_dbc.py ksu_dbc # Replace 'your_script.py' with your script's filename
 
       # - name: Run executable
       #   run: ./your_executable  # Replace 'your_executable' with your executable's filename
@@ -31,7 +31,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ steps.date.outputs.date }} 
+          tag_name: ${{ github.ref_name }}-${{ steps.date.outputs.date }} 
           files: | 
             ksu_dbc.dbc
 
