--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -45,6 +45,17 @@ jobs:
       uses: mathbrook/pyinstaller-action-windows@python310
       with:
         path: .
+
+    - name: release-downloader
+      uses: robinraju/release-downloader@v1.8
+      with:
+        repository:
+          KSU-MS/ksu-ms-dbc
+        latest: true
+        fileName: "*.dbc"
+        out-file-path: |
+          ./dist/windows/parser_exe/dbc-files/
+
     - name: upload artifacts
       uses: actions/upload-artifact@v2
       with:
