--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,4 +1,4 @@
-name: build linux executable
+name: build and run linux executable
 
 on:
   push:
@@ -64,7 +64,7 @@ jobs:
         path: |
           ./build/*
           ./dist/*
-  test-exe:
+  test-bin:
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -75,7 +75,7 @@ jobs:
           path: parser-exe-download
       - name: run exe
         run: |
-          ls -r
+          ls -R
           cd parser-exe-download
           cd dist
           chmod u+x parser_exe
