--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -76,9 +76,14 @@ jobs:
       - name: run exe
         run: |
           ls -R
+          echo "before first cd"
           cd parser-exe-download
+          echo "after first cd"
+          ls -R
           cd dist
-          chmod u+x parser_exe
-          parser_exe
+          echo "after third CD"
+          ls -R
+          chmod u+x ./parser_exe
+          ./parser_exe
           
         
