--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -76,7 +76,9 @@ jobs:
           ls -r
           cd parser-exe-download
           cd parser_exe
-          parser_exe.exe
+          ls
+          echo "trying to run"
+          .\parser_exe.exe
           
 
     # - uses: actions/upload-artifact@v2
