copy over test csv as well to artifact

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -64,6 +64,8 @@ jobs:
         path: |
           ./build/*
           ./dist/*
+          ./test/*.csv
+          
   test-bin:
     needs: build
     runs-on: ubuntu-latest
