--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -49,10 +49,11 @@ jobs:
     - name: run pyinstaller
       run: |
         pyinstaller --onefile ./parser_exe.py
+
     - name: copy test into dist folder
       run: |
         ls -r
-        xcopy "./test" "./dist" /E
+        xcopy ".\test" ".\dist" /E
 
     - name: release-downloader
       uses: robinraju/release-downloader@v1.8
