fix exe args and add csv to check error handling of file with wrong first row

--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -83,14 +83,16 @@ jobs:
         with:
           name: parser-exe-windows
           path: parser-exe-download
-      - name: run exe # watch the - and _ here lol
+      - name: go to exe path # watch the - and _ here lol
         run: |
           ls -r
           cd parser-exe-download
           cd dist
-          echo "trying to run"
-          .\parser_exe.exe --getdbc True --test True
-          
+      - name: run executable
+        run: |
+          .\parser_exe.exe -h
+          .\parser_exe.exe --getdbc --test -v
+         
 
     # - uses: actions/upload-artifact@v2
     #   with:
