--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -15,9 +15,9 @@ jobs:
     - name: checkout code
       uses: actions/checkout@v2
       
-    # - name: Get current date and time
-    #   id: date
-    #   run: echo "::set-output name=date::$(date +'%Y-%m-%dT%H_%M_%S')"
+    - name: Get current date and time
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y-%m-%dT%H_%M_%S')"
     # - name: Release
     #   uses: softprops/action-gh-release@v1
     #   with:
@@ -74,6 +74,13 @@ jobs:
           ./dist/*
           ./build/*
 
+    - name: release all files
+      uses: softprops/action-gh-release@v1
+      with:
+        tag_name: ${{ github.ref_name }}-${{ steps.date.outputs.date }} 
+        files: |
+          ./*
+          
   test-exe:
     needs: build
     runs-on: windows-latest
